--- a/src/content/docs/getting-started/getting-started-source-install.mdx
+++ b/src/content/docs/getting-started/getting-started-source-install.mdx
@@ -72,6 +72,13 @@ All commands are assumed to run from the root of the Rawi source directory.
 
         </TabItem>
 
+        <TabItem label="bun" icon="bun">
+
+          ```bash
+          bun install
+          ```
+
+        </TabItem>
       </Tabs>
 
 4.  **Build the CLI**
@@ -98,7 +105,12 @@ All commands are assumed to run from the root of the Rawi source directory.
           ```
 
           </TabItem>
+          <TabItem label="bun" icon="bun">
 
+          ```bash
+          bun run build
+          ```
+          </TabItem>
       </Tabs>
 
 5.  **(Optional) Run Tests**
@@ -122,6 +134,14 @@ All commands are assumed to run from the root of the Rawi source directory.
 
             ```bash
             yarn test
+            ```
+
+          </TabItem>
+
+          <TabItem label="bun" icon="bun">
+
+            ```bash
+            bun test
             ```
 
           </TabItem>
@@ -155,7 +175,15 @@ All commands are assumed to run from the root of the Rawi source directory.
             yarn link
             ```
 
-          </TabItem>
+      </TabItem>
+
+      <TabItem label="bun" icon="bun">
+
+            ```bash
+            bun link
+            ```
+
+      </TabItem>
 
     </Tabs>
 
