--- a/src/content/docs/getting-started/version.mdx
+++ b/src/content/docs/getting-started/version.mdx
@@ -46,6 +46,13 @@ This topic describes how to install previous releases of the Rawi Command Line I
              ```
 
            </TabItem>
+           <TabItem label="bun" icon="bun">
+
+             ```bash
+             bun add -g rawi@<version>
+             ```
+
+            </TabItem>
          </Tabs>
       2. **(Optional) Install a specific beta version:**
 
@@ -95,6 +102,14 @@ This topic describes how to install previous releases of the Rawi Command Line I
              ```
 
            </TabItem>
+
+            <TabItem label="bun" icon="bun">
+  
+              ```powershell
+              bun add -g rawi@<version>
+              ```
+  
+            </TabItem>
          </Tabs>
       3. **Verify installation:**
 
@@ -132,6 +147,13 @@ This topic describes how to install previous releases of the Rawi Command Line I
     ```
 
   </TabItem>
+  <TabItem label="bun" icon="bun">
+
+    ```bash
+    bun add rawi@<version>
+    ```
+
+  </TabItem>
 </Tabs>
 
 ## Verify Installation
@@ -147,7 +169,7 @@ This topic describes how to install previous releases of the Rawi Command Line I
     Sample output:
 
     ```bash
-    rawi/0.0.0-beta.12 linux-x64 node-18.20.2
+    rawi/x.x.x linux-x64 node-18.20.2
     ```
 
   </TabItem>
@@ -161,7 +183,7 @@ This topic describes how to install previous releases of the Rawi Command Line I
     Sample output:
 
     ```powershell
-    rawi/0.0.0-beta.12 win32-x64 node-18.20.2
+    rawi/x.x.x win32-x64 node-18.20.2
     ```
 
   </TabItem>
@@ -214,6 +236,13 @@ For troubleshooting installation issues, see the [Troubleshooting Guide](./docs/
     ```
 
   </TabItem>
+  <TabItem label="bun" icon="bun">
+
+    ```bash
+    bun remove -g rawi
+    ```
+
+  </TabItem>
 </Tabs>
 
 ---
@@ -242,7 +271,7 @@ For troubleshooting installation issues, see the [Troubleshooting Guide](./docs/
 
     ```bash
     rawi --version
-    rawi/0.0.0-beta.12 linux-x64 node-18.20.2
+    rawi/x.x.x linux-x64 node-18.20.2
     ```
 
   </TabItem>
@@ -250,7 +279,7 @@ For troubleshooting installation issues, see the [Troubleshooting Guide](./docs/
 
     ```powershell
     rawi --version
-    rawi/0.0.0-beta.12 win32-x64 node-18.20.2
+    rawi/x.x.x win32-x64 node-18.20.2
     ```
 
   </TabItem>
