--- a/src/content/docs/userguide/index.mdx
+++ b/src/content/docs/userguide/index.mdx
@@ -28,7 +28,7 @@ To check your installed version, run:
 
 ```bash
 $ rawi --version
-rawi/0.0.0-beta.12 linux-x64 node-v18.20.2
+rawi/x.x.x linux-x64 node-v18.20.2
 ```
 
 For version history and release notes, see the [Releases](https://github.com/MKAbuMattar/rawi/releases).
